<resources>
    <string name="app_name">FederatedBirds</string>
    <string name="hello">Hello world</string>
    <string name="login">Connexion</string>
    <string name="password">Mot de passe</string>
    <string name="username">Login</string>
    <string name="invalid_format">Format incorrect</string>
    <string name="login_failed">La connexion a échoué</string>
    <string name="home">Accueil</string>
    <string name="settings">Réglages</string>
    <string name="open_menu">Ouvrir le menu</string>
    <string name="close_menu">Fermer le menu</string>
    <string name="logout">Déconnexion</string>
    <string name="login_progress">Connexion en cours...</string>
    <string name="followed">Abonnements</string>
    <string name="new_message">Nouveau message</string>
    <string name="post">Poster</string>
    <string name="empty_message_error">Message vide non posté.</string>
    <string name="progress">En cours...</string>
    <string name="post_failed">Le post a échoué.</string>
    <string name="inscription">Inscription</string>
    <string name="sinscrire">S\'inscrire</string>
    <string name="Annuler">Annuler</string>
    <string name="email">Email</string>
    <string name="followers">Abonnés</string>
    <string name="changer_avatar">Changer Avatar</string>

</resources>
